[package]
name = "chronogrog"
version = "0.1.0"
authors = ["Scott Johnson <jaywir3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
assert-json-diff = "1.0.0"
chrono = "0.4.9"
