[package]
name = "chronogrog"
description = "Convert a file in beer production description format (BPD) to PLA format, a format suitable for usage with the PLA tool. Note that the beer production description format is a specialized format for describing beer recipe production data."
version = "0.1.0"
authors = ["Scott Johnson <jaywir3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
assert-json-diff = "1.0.0"
chrono = "=0.4.23"
string-builder = "0.2.0"
serde_test = "1.0.103"
clap = "~2.33.0"
chrono_period = "^0.1.0"
